# secunda

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: seed.py
src/secunda/: main.py
src/secunda/application/: constants.py  dto.py  entities.py  interfaces.py
src/secunda/application/interactors/: __init__.py  activity.py  building.py  organization.py
src/secunda/application/services/: __init__.py  geo.py
src/secunda/infra/: config.py  ioc.py
src/secunda/infra/database/: __init__.py  models.py  session.py
src/secunda/infra/migrations/alembic/: env.py
src/secunda/infra/migrations/alembic/versions/: 001_initial.py
src/secunda/infra/repositories/: __init__.py  activity.py  building.py  organization.py
src/secunda/presentation/: schemas.py
src/secunda/presentation/routers/: __init__.py  activities.py  buildings.py  organizations.py
